--- a/README
+++ b/README
@@ -1,3 +1,10 @@
 Image-Better-Upper
 An app to update old, low-resolution images to modern internet expectations.
 
+Built with Flask and using the super-resolution ESPCN model from OpenCV, this app recovers high-resolution images from the corresponding low-resolution images on input.
+
+Demo at https://image-better-upper.mizucode.com/
+
+Since this is intended for upgrading lower-resolution images, the max total file size is 2MB.
+
+Here is an example of the difference in resolution:
